# TODO_CLI_App

./: .gitignore  LICENSE.txt  README.md  SetupLog4.txt
python-todo/: python-todo.py
rust-todo/: Cargo.toml  SetupLog4.txt  TODO
rust-todo/.cargo/: config.toml
rust-todo/official-v1/: TODO
rust-todo/src/: TODO  linux_todo.rs  main.rs  windows_todo.rs
