[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"
default-run = "linux_todo" # src/linux_todo.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#(points to either ncurses or pdcurses-sys respectively)
pancurses = { version = "0.17.0", features = ["win32a"] }  

[[bin]]
name = "windows_todo"
path = "src/windows_todo.rs"

[[bin]]
name = "linux_todo"
path = "src/linux_todo.rs"


# [target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
ncurses = "5.101.0"
